--- a/style.css
+++ b/style.css
@@ -1,114 +1,124 @@
-
-
-.mobile-desktop{
+.mobile-desktop {
     background-image: url("wp2704890.webp");
     background-repeat: no-repeat;
     background-size: cover;
 }
-.resume{ 
-    color:orange;
+
+.resume { 
+    color: orange;
     font-size: 15px;
-    padding-left: 500px;
-    padding-right: 15px;
-    padding-bottom: 20px;
-    border:none;
+    padding: 10px 15px;
+    border: none;
     border-radius: 25px;
     background-color: rgb(22, 51, 61);
     cursor: pointer;
-
 }
 
-.hi{
-font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color:orange;
+.hi {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: orange;
     font-size: 15px;
-    padding-left: 20px;
-    padding-right: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    border:none;
+    padding: 5px 10px;
+    border: none;
     border-radius: 25px;
     background-color: rgb(22, 51, 61);
-    
 }
 
-.welcome_note{
+.welcome_note {
     font-family: 'Times New Roman', Times, serif;
     font-size: 25px;
     font-weight: bold;
-    color:blue;
-    padding-left:20px;
+    color: blue;
+    padding: 20px;
 }
 
-.flex_container{
-    display:flex;
+.flex_container {
+    display: flex;
     flex-direction: column;
     align-items: center;
-    display:grid;
-    grid-template-columns: repeat(1, 1fr);
 }
-.content_project{
+
+.content_project {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
-    display:flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    padding-left: 75px;
-    padding-right: 75px;
-    padding-top:75px;
-    grid-gap: 100px;
-    grid-template-rows: 200px;
+    padding: 50px;
+    grid-gap: 50px;
 }
 
-.title_name{
+.title_name {
     font-family: 'Times New Roman', Times, serif;
     font-size: 25px;
-    font-weight:normal;
-    border:solid;
+    font-weight: normal;
+    border: solid;
     border-radius: 30px;
-    border-style: 2px;
+    border-width: 2px;
     border-color: rgb(136, 120, 32);
-    padding-left: 20px;
-    text-align-last:center;
+    padding: 20px;
+    text-align: center;
 }
-.autonomous_underwater_vehile{
-    color:white;
+
+.autonomous_underwater_vehicle,
+.underwater_ROV,
+.DD_robocon2020,
+.aqua_boat,
+.photo {
+    color: white;
 }
-.underwater_ROV{
-    color:white;
-}
-.DD_robocon2020{
-    color:white;
-}
-.aqua_boat{
-    color:white;
-}
-.photo{
-    color:white;
-}
-.cont_container{
-    display:flex;
-    flex-direction:column;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+
+.cont_container {
+    display: flex;
+    flex-direction: column;
     border-top: solid;
-    border-color:azure;
+    border-color: azure;
     background-color: rgb(88, 92, 92);
 }
-.cont{
-    color:rgb(214, 185, 21);
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size:15px;
-    padding-left: 30px;
-    padding-right:10px;
 
-    
-}
-.title{
-    color:rgb(11, 2, 20);
+.cont {
+    color: rgb(214, 185, 21);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size:25px;
-    padding-left: 50px;
+    font-size: 15px;
+    padding: 10px;
+}
+
+.title {
+    color: rgb(11, 2, 20);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 25px;
+    padding: 20px;
+}
+
+/* Responsive Styles */
+
+@media only screen and (max-width: 600px) {
+    .resume,
+    .hi,
+    .title_name,
+    .welcome_note,
+    .content_project,
+    .cont_container,
+    .cont,
+    .title {
+        padding: 10px;
+    }
+    
+    .content_project {
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 20px;
+        padding: 20px;
+    }
+    
+    .cont_container {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .flex_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+    }
 }
